<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_logged_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.danae.watopia.LoggedIn">

    <TextView
        android:text="@string/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:id="@+id/name"
        android:labelFor="@+id/name"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username"
        android:labelFor="@+id/username"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <TextView
        android:text="@string/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview14"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/username"
        android:layout_alignEnd="@+id/textView11" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/standing"
        android:labelFor="@+id/standing"
        android:layout_alignBaseline="@+id/textView15"
        android:layout_alignBottom="@+id/textView15"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/Standing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/LogOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:background="@color/buttonyellow"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/Edit_Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:background="@color/buttonyellow"
        android:layout_marginTop="79dp"
        android:layout_below="@+id/standing"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/password"
        android:labelFor="@id/password"
        tools:ignore="TextFields"
        android:layout_below="@+id/textview14"
        android:layout_alignParentStart="true"
        android:inputType="textPassword" />

</RelativeLayout>
