<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quality_report"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.danae.watopia.qualityReport">

    <TextView
        android:text="@string/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_alignParentStart="true"
        android:id="@+id/dateEdit"
        android:layout_alignParentEnd="true"
        android:textSize = "15sp"/>

    <TextView
        android:text="@string/Numer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/textView20" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView20"
        android:layout_alignParentStart="true"
        android:id="@+id/numberEdit"
        android:fontFamily="sans-serif"
        android:textSize="15sp" />

    <TextView
        android:text="@string/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/numberEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/textView22" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView22"
        android:layout_alignParentStart="true"
        android:id="@+id/nameEdit"
        android:textSize="15sp" />

    <TextView
        android:text="@string/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/locationtext" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/locationtext"
        android:layout_alignParentStart="true"
        android:id="@+id/locationEdit"
        android:labelFor="@+id/locationEdit"
        android:layout_alignParentEnd="true"
        android:textSize="15sp" />

    <TextView
        android:text="@string/Virus_PPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/textView28" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:layout_below="@+id/textView28"
        android:layout_alignParentStart="true"
        android:id="@+id/virusEdit"
        android:labelFor="@+id/virusEdit"
        android:layout_alignParentEnd="true"
        android:textSize="15sp" />

    <TextView
        android:text="@string/Condition_PPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/virusEdit"
        android:layout_alignParentStart="true"
        android:id="@+id/iiiii" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/contaminationEdit"
        android:labelFor="@+id/contaminationEdit"
        android:textSize="15sp"
        android:layout_below="@+id/iiiii"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/Condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contaminationEdit"
        android:layout_alignStart="@+id/conditionSpinner"
        android:id="@+id/textView17"
        android:layout_alignEnd="@+id/textView28" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conditionSpinner"
        android:layout_below="@+id/textView17"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:id="@+id/edit" />

    <Button
        android:text="@string/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/edit"
        android:id="@+id/cancelBtn" />

</RelativeLayout>
