<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login_activity_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.danae.watopia.LoginActivityPage"
    tools:showIn="@layout/activity_login_page">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/_username"
        android:layout_below="@+id/textView2"
        android:labelFor="@+id/_username"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/_password"
        android:labelFor="@+id/_password"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <Button
        android:textColor="#FFFFFF"
        android:background="@color/buttonyellow"
        android:text="@string/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/regBtn"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/_login"
        android:layout_alignParentStart="true" />

    <Button
        android:textColor="#FFFFFF"
        android:text="@string/Cancel"
        android:background="@color/buttonyellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:layout_below="@+id/regBtn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <Button
        android:textColor="#FFFFFF"
        android:background="@color/buttonyellow"
        android:text="@string/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/_login"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/_password"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/_username"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView2"
        android:layout_alignParentStart="true" />

</RelativeLayout>
